[gd_scene load_steps=3 format=3 uid="uid://b53dubmlxglo2"]

[ext_resource type="Script" path="res://levels/LevelChange.gd" id="1"]
[ext_resource type="Theme" uid="uid://dnidbxs13ujws" path="res://Resource/big.tres" id="2"]

[node name="LevelChange" type="Node2D"]
script = ExtResource("1")

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 303.0

[node name="Step1" type="HFlowContainer" parent="TabContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Level1-1" type="Button" parent="TabContainer/Step1"]
layout_mode = 2
theme = ExtResource("2")
text = "1-1"

[node name="Level1-2" type="Button" parent="TabContainer/Step1"]
layout_mode = 2
theme = ExtResource("2")
text = "1-2"

[node name="Level1-3" type="Button" parent="TabContainer/Step1"]
layout_mode = 2
theme = ExtResource("2")
text = "1-3"

[node name="Settings" type="HFlowContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Level-remote" type="Button" parent="TabContainer/Settings"]
layout_mode = 2
theme = ExtResource("2")
text = "REMOTE"

[node name="Select" type="Button" parent="TabContainer/Settings"]
layout_mode = 2
text = "Select"

[connection signal="pressed" from="TabContainer/Step1/Level1-1" to="." method="_on_Level11_pressed"]
[connection signal="pressed" from="TabContainer/Step1/Level1-2" to="." method="_on_Level12_pressed"]
[connection signal="pressed" from="TabContainer/Step1/Level1-3" to="." method="_on_Level13_pressed"]
[connection signal="pressed" from="TabContainer/Settings/Level-remote" to="." method="_on_Levelremote_pressed"]
[connection signal="pressed" from="TabContainer/Settings/Select" to="." method="_on_select_pressed"]
